--- a/rpm/systemd/diamond.service
+++ b/rpm/systemd/diamond.service
@@ -2,8 +2,9 @@
 Description=diamond - A system statistics collector for graphite
 
 [Service]
-ExecStart=/usr/bin/python /usr/bin/diamond --log-stdout --foreground
-Restart=on-abort
+ExecStart=/usr/bin/python /usr/bin/diamond -p /var/run/diamond.pid
+Type=forking
+PIDFile=/var/run/diamond.pid
 
 [Install]
 WantedBy=multi-user.target
