--- a/rpm/systemd/diamond.service
+++ b/rpm/systemd/diamond.service
@@ -2,8 +2,9 @@
 Description=diamond - A system statistics collector for graphite
 
 [Service]
-ExecStart=/usr/bin/python /usr/bin/diamond -p /var/run/diamond.pid
+ExecStart=/usr/bin/python /usr/bin/diamond
 Type=forking
+#If not using default pid, make sure you change PIDFile setting
 PIDFile=/var/run/diamond.pid
 
 [Install]
